2004-10-27  Rudolf Lippan <rlippan@remotelinux.com> (2.9005_3)
	* Removed requirement that mysql.mtest be included in the distribution.
	* DBI 1.43 is required -- It is needed for support of 
	  $dbh->last_insert_id().
	* Added $dbh->{mysql_unsafe_bind_type_guessing} = 2 which will look at
	  each bind_param and make guess based on whether it looks like a 
	  number, and if the parameter looks like a number, it will not be 
	  quoted.  [thanks to dragonchild for cleaning up the initial rough 
	  draft impementation making it ready for prime time]
	* Applied patch to fix column which broke with later version of mysql
	  [Tim Bunce]
	* Merged $dbh->last_inert_id() from the 3.0 dev tree
	* If you are using perl 5.008 without a $ENV{LANG} of "C". Makefile.PL
	  will now 1. Complain loudly, and 2. set LANG to "C" and then
	  exec itself with the new lang setting.
	* Added '$dbh->{mysql_unsafe_bind_type_guessing}'. When this flag is
	  enabled any scalar that is passed to execute() and was used in
	  numeric context will be treated as a number when being sent to the
	  database backend. This can be a secuity problem in that if you 
	  use a string in numeric context, it will NOT be quoted before being 
	  passed to the database -- use at your own risk. The default is off.
	* fixed typo in pod chaning  failed_auto_reconnects_failed to 
	  auto_reconnects_failed [Paul DuBois <paul@snake.net>]

2004-07-13  Rudolf Lippan <rlippan@remotelinux.com> (2.9004)
        * myld now exits with the return value of ld rather than always exiting
          with a value of when when myld returned something other than 0.
        * Table names that had '?'s in them and were quoted using '`' would thow
          off placeholder counting.
        * Add support for mysq 4.1.3's api change to shutdown 
          [Patrick Galbraith]
        * Fixed to error messages in t/50commit.t 
          [Decker, Gero <gero.decker@sap.com>]
        * Fix to documentation of mysql_local_info.  enabling 